<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My New Words</string>

    <string name="text_button_add">Add</string>
    <string name="text_arxive">Arxive</string>
    <string name="text_info">App Info</string>

    <string name="text_clear_all">Clear All</string>
    <string name="text_ch_language">Change Language</string>
    <string name="text_actionbar_country">Countries</string>
    <string name="button_text_cancel">Cancel</string>

    <string name="text_delete">delete</string>
    <string name="text_item_dictionary">Dictionary</string>
    <string name="text_actionbar_dictionary">Dictionaries</string>
    <string name="text_dictionary_info">Dictionary Info</string>
    <string name="done">Done</string>

    <string name="example">Example</string>

    <string name="first_to_second"><![CDATA[First <-> Second]]></string>

    <string name="text_game">Game</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_Home">Home</string>

    <string name="dicinory_info_text"># Info</string>

    <string name="text_button_learn">Learn Words</string>

    <string name="text_name">Name</string>
    <string name="text_button_next">next</string>

    <string name="text_button_ok">OK</string>
    <string name="text_open_item">Open Item</string>

    <string name="text_recant">Recant</string>

    <string name="text_string">Setting</string>
    <string name="text_select">Slect</string>

    <string name="text_todo">TODO</string>
    <string name="text_title">Title</string>

    <string name="text_update">Update</string>

    <string name="text_button_open_list">Word List</string>
    <string name="text_w_first">Word First</string>
    <string name="text_w_second">Word Second</string>
    <string name="second_to_first"><![CDATA[Second <-> First]]></string>
</resources>