<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#1A000000"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/day_night_actionbar_background"
            android:clickable="false">

            <ImageButton
                android:id="@+id/igb_back"
                style="@style/ButtonStyleBorderless"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="12dp"
                android:contentDescription="@string/text_todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintLeft_toLeftOf="parent"
                android:src="@drawable/day_night_ic_back"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/Text.Title.Alternative"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:maxLines="1"
                android:paddingStart="24dp"
                android:text="@string/text_title"
                app:layout_constraintLeft_toRightOf="@id/igb_back"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_massage"
        style="@style/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        tools:ignore="RtlSymmetry" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingLeft="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_massage">

        <LinearLayout
            android:id="@+id/btn_left_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/day_night_my_button"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/btn_left"
                style="@style/Text.Title.Alternative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_recant"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_right_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/day_night_my_button"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/btn_right"
                style="@style/Text.Title.Alternative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_delete"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>