<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/def_dialog"
    android:background="#1A000000"
    android:orientation="vertical">

    <include
        android:id="@+id/def_actionBar"
        layout="@layout/screen_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/def_et_name_layout"
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/text_name"
        app:placeholderText="Dictionary"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/def_et_info_layout"
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/text_dictionary_info"
        app:placeholderText="That is what it is about?"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:imeOptions="actionDone"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:paddingEnd="12dp"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/def_et_name_layout"
        tools:ignore="RtlSymmetry">

        <LinearLayout
            android:id="@+id/btn_ok_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/day_night_bg_btn"
            android:gravity="center"
            android:paddingStart="32dp"
            android:paddingTop="8dp"
            android:clickable="true"
            android:elevation="6dp"
            android:layout_marginBottom="8dp"
            android:paddingEnd="32dp"
            android:paddingBottom="8dp"
            android:focusable="true"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/btn_ok"
                style="@style/Text.Title.Alternative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_button_add"
                android:clickable="false"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>