<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/def_dictionary_item_layout"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:elevation="3dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/def_actionBar"
            layout="@layout/screen_action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="24dp"
            android:paddingTop="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="8dp">

            <ImageView
                android:id="@+id/country_one_flag"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/text_todo"
                app:layout_constraintDimensionRatio="1.5:1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck"
                tools:src="@drawable/country_uzb" />

            <ImageView
                android:id="@+id/def_change_country"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:background="@drawable/ic_compare"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/text_todo"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintLeft_toRightOf="@id/country_one_flag"
                app:layout_constraintRight_toLeftOf="@id/country_two_flag"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/country_two_flag"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/text_todo"
                app:layout_constraintDimensionRatio="1.5:1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/country_england_usa_mix" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            style="@style/Text.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:text="@string/dicinory_info_text"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textInfo"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:layout_marginTop="8dp"
            android:focusable="true"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            tools:ignore="NestedWeights"
            tools:text="lsdclandjaadkakudnadunaadj" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5">

        <LinearLayout
            android:id="@+id/percent_list_word_view"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:background="@drawable/custom_background_raund"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/buttonlist"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/percent_list_word_text"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:ignore="TextContrastCheck"
                tools:text="100/100\n100%" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonlist"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="75dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/animator_btn_list"
            android:text="@string/text_button_open_list"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <include
        android:id="@+id/def_loading"
        layout="@layout/screen_loading"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:elevation="6dp" />

</androidx.constraintlayout.widget.ConstraintLayout>