<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_home"
    style="@style/BackgroundLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/actionBarHome"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/day_night_actionbar_background"
            android:gravity="center|left"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded">

            <ImageButton
                android:id="@+id/menuBtnHome"
                style="@style/ButtonStyleBorderless"
                android:layout_width="26dp"
                android:layout_height="32dp"
                android:layout_marginLeft="8dp"
                android:scaleType="fitCenter"
                android:contentDescription="@string/text_todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:src="@drawable/day_night_ic_menu"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/actionBarText"
                style="@style/Text.Title.Alternative"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:text="@string/text_actionbar_dictionary"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/menuBtnHome"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/learn_count"
                style="@style/Text.Title.Percent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:maxLength="6"
                android:maxLines="1"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck"
                tools:text="999 K+" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/selectedActionBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:background="@drawable/day_night_actionbar_background"
                    android:clickable="false">

                    <ImageButton
                        android:id="@+id/igb_back"
                        style="@style/ButtonStyleBorderless"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_margin="12dp"
                        android:contentDescription="@string/text_todo"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:src="@drawable/day_night_ic_back"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/action_bar_delete"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_margin="12dp"
                        android:background="@drawable/day_night_ic_delete"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintRight_toRightOf="parent"
                        android:contentDescription="@string/text_todo"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/action_bar_select_all"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_margin="12dp"
                        android:background="@drawable/day_night_ic_checkbox"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintRight_toLeftOf="@id/action_bar_delete"
                        android:contentDescription="@string/text_todo"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/my_fragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/actionBarHome">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listHome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_dictionary" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/floatingBtnHome"
                style="@style/FloatButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:text="@string/text_button_add"
                app:icon="@drawable/day_night_ic_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:rippleColor="@color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/layoutLoadingMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#33000000"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:visibility="gone">

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="60dp"
                android:layout_height="60dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view_home"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header_layout_menu"
        app:menu="@menu/main_menu" />
</androidx.drawerlayout.widget.DrawerLayout>